# RoNaoldo

./: CMakeLists.txt  README.md  package.xml  publishImage.py
images-testmarker/: frame-test1.xcf
launch/: markers-test.launch  position.launch  vision.launch
msg/: ballMsg.msg  controlMsg.msg  goalPosition.msg  visionMsg.msg
src/: control.cpp  dummyVision.cpp  redColorParams.txt  relativePosition.cpp  vision-marker.cpp  vision.cpp  visionBall.cpp  visionMarker.cpp
